# nice-core

./: .gitignore  CMakeLists.txt  Doxyfile  INSTALL.txt  Makefile  Makefile.inc  NOTES  PACKAGES  README  README.md  index.html  params.json  readme.txt  setenv.sh
core/: CMakeDefinesConfig.h.in  CMakeLists.txt  NOTES  corefiles.cmake  progfiles.cmake  testfiles.cmake
core/algebra/: CMakeLists.txt  CMakeLists.txt.old  CholeskyRobust.cpp  CholeskyRobust.h  CholeskyRobustAuto.cpp  CholeskyRobustAuto.h  DiagonalMatrixApprox.cpp  DiagonalMatrixApprox.h  EigValues.cpp  EigValues.h  EigValuesTRLAN.cpp  EigValuesTRLAN.h  GBCDSolver.cpp  GBCDSolver.h  GMSparseVectorMatrix.cpp  GMSparseVectorMatrix.h  GMStandard.cpp  GMStandard.h  GenericMatrix.cpp  GenericMatrix.h  ILSConjugateGradients.cpp  ILSConjugateGradients.h  ILSConjugateGradientsLanczos.cpp  ILSConjugateGradientsLanczos.h  ILSMinResLanczos.cpp  ILSMinResLanczos.h  ILSPlainGradient.cpp  ILSPlainGradient.h  ILSSymmLqLanczos.cpp  ILSSymmLqLanczos.h  IterativeLinearSolver.cpp  IterativeLinearSolver.h  LUDecomposition.cpp  LUDecomposition.h  MatrixDecomposition.h  PartialGenericMatrix.h  libdepend.inc
core/algebra/progs/: CMakeLists.txt  testILSConjugateGradients.cpp  testILSConjugateGradientsLanczos.cpp  testILSMinResLanczos.cpp  testILSSymmLqLanczos.cpp  testILSmethods.cpp
core/algebra/tests/: Makefile.inc  TestDiagApprox.cpp  TestDiagApprox.h  TestEigenValue.cpp  TestEigenValue.h  TestLUDecomposition.cpp  TestLUDecomposition.h  TestLinearSolve.cpp  TestLinearSolve.h
core/basics/: BFSColor.h  BinStreamable.cpp  BinStreamable.h  CMakeLists.t.txt  CMakeLists.txt  Config.cpp  Config.h  CrossplatformDefines.h  Exception.cpp  Exception.h  FastMath.cpp  FastMath.h  FileMgt.cpp  FileMgt.h  FileName.cpp  FileName.h  FrameRateCounter.cpp  FrameRateCounter.h  Log.cpp  Log.h  NonCopyable.h  Observable.cpp  Observable.h  Observer.cpp  Observer.h  Persistent.h  ResourceStatistics.cpp  ResourceStatistics.h  RoundToNearest.h  Streamable.cpp  Streamable.h  StringTools.cpp  StringTools.h  StructuredMap.h  Timer.cpp  Timer.h  all.h  assert.h  binstream.h  bzstream.cpp  (+19 more)
core/basics/progs/: CMakeLists.txt  testConfig.cpp  testMemoryUsage.cpp
core/basics/tests/: FileNameTest.cpp  FileNameTest.h  TestObserver.cpp  TestObserver.h  Testbinstream.cpp  Testbinstream.h  Testcasts.cpp  Testcasts.h  Testgzbinstream.cpp  Testgzbinstream.h  TimerTest.cpp  TimerTest.h  cppunitexTest.cpp  cppunitexTest.h  numerictoolsTest.cpp  numerictoolsTest.h  stringutilsTest.cpp  stringutilsTest.h
core/iceconversion/: convertice.h  image_convertice.h
core/ignore/: OpaqueT.cpp  OpaqueT.h  OpaqueT.tcc
core/image/: Algorithms.cpp  Algorithms.h  BlockImageAccessT.h  BlockImageAccessT.tcc  Buffer.h  Buffer.tcc  CMakeLists.txt  CircleT.h  CircleT.tcc  ColorImageAccess.cpp  ColorImageAccess.h  ColorImageChannelAccessT.h  ColorImageT.cpp  ColorImageT.h  ColorImageT.tcc  ColorT.h  ColorT.tcc  Convert.cpp  Convert.h  Convert.tcc  CoordT.h  CrossT.h  CrossT.tcc  DeprecatedConverter.cpp  DeprecatedConverter.h  DeprecatedConverter.tcc  DeprecatedFilter.cpp  DeprecatedFilter.h  DeprecatedFilter.tcc  Drawable.h  EllipseT.h  EllipseT.tcc  Filter.cpp  Filter.h  Filter.tcc  FilterT.cpp  FilterT.h  FilterT.tcc  Fourier.cpp  Fourier.h  (+62 more)
core/image/progs/: CMakeLists.txt  Makefile.inc  compareImages.cpp  convertImageNice.cpp  testApproxGaussFilter.cpp  testGenericSobelFilter.cpp
core/image/tests/: ImageTest.cpp  ImageTest.h  MultiChannelImageTTest.cpp  MultiChannelImageTTest.h  TestColor.cpp  TestColor.h  TestConvert.cpp  TestConvert.h  TestConverter.cpp  TestConverter.h  TestDrawable.cpp  TestDrawable.h  TestFilter.cpp  TestFilter.h  TestFourier.cpp  TestFourier.h  TestHistogram.cpp  TestHistogram.h  TestImageFile.cpp  TestImageFile.h  TestImageFileList.cpp  TestImageFileList.h  TestImageOperators.cpp  TestImageOperators.h  TestImageTools.cpp  TestImageTools.h  TestMorph.cpp  TestMorph.h  TestRect.cpp  TestRect.h
core/imagedisplay/: ArrayPlot.cpp  ArrayPlot.h  CaptureDialog.cpp  CaptureDialog.h  CaptureWidget.cpp  CaptureWidget.h  DefaultMainWindow.cpp  DefaultMainWindow.h  EpipolarGeometryDisplay.cpp  EpipolarGeometryDisplay.h  ImageDisplay.cpp  ImageDisplay.h  ImageDisplayManager.cpp  ImageDisplayManager.h  ImageDisplayManagerWidget.cpp  ImageDisplayManagerWidget.h  ImageDisplaySDL.cpp  ImageDisplaySDL.h  Makefile  Makefile.inc  OverlayColors.h  PolygonDrawer.cpp  PolygonDrawer.h  QtFramework.cpp  QtFramework.h  SimpleSelector.cpp  SimpleSelector.h  libdepend.inc
core/imagedisplay/progs/: showImage.cpp
core/matlabAccess/: CMakeLists.txt  MatFileIO.cpp  MatFileIO.h  libdepend.inc
core/matlabAccess/progs/: testMatFileIO.cpp
core/optimization/: .cvsignore  CMakeLists.txt  libdepend.inc
core/optimization/blackbox/: CMakeLists.txt  CostFunction.cpp  CostFunction.h  Definitions_core_opt.h  DimWrapperCostFunction.cpp  DimWrapperCostFunction.h  DownhillSimplexOptimizer.cpp  DownhillSimplexOptimizer.h  OptLogBase.cpp  OptLogBase.h  Optimizable.cpp  Optimizable.h  Optimizer.cpp  Optimizer.h  SimpleOptProblem.cpp  SimpleOptProblem.h  SimpleOptimizer.cpp  SimpleOptimizer.h  libdepend.inc
core/optimization/gradientBased/: CMakeLists.txt  FirstOrderRasmussen.cpp  FirstOrderRasmussen.h  FirstOrderTrustRegion.cpp  FirstOrderTrustRegion.h  OptimizationAlgorithmFirst.cpp  OptimizationAlgorithmFirst.h  OptimizationAlgorithmSecond.cpp  OptimizationAlgorithmSecond.h  TrustRegionBase.h  (+8 more)
core/progs/: imageDemo.cpp
core/tutorial/: 00_install.md  01_imageio.md  02_grayscale.md  03_color.md  04_filter.md  TODO
core/vector/: Algorithms.cpp  Algorithms.h  Algorithms.tcc  CMakeLists.txt  CMakeLists.txt.old  CheckedMatrixT.h  CheckedRowMatrixT.h  CheckedVectorT.h  Distance.cpp  Distance.h  Distance.tcc  Eigen.h  Eigen.tcc  MatrixBase.h  MatrixT.h  MatrixT.tcc  Operators.h  RowMatrixT.h  RowMatrixT.tcc  SVD.h  SparseVector.h  SparseVectorT.h  SparseVectorT.tcc  VVector.cpp  VVector.h  VectorBase.h  VectorT.h  VectorT.tcc  cppunitex.h  ippwrapper.cpp  ippwrapper.h  ippwrapper.tcc  libdepend.inc
(+67 files in other folders)
